--- a/index.html
+++ b/index.html
@@ -250,6 +250,85 @@
   }
 }
 
+    /* =====================
+   CHAT RUTE – ASSISTENTE
+===================== */
+
+#chat-botao {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  background: var(--accent);
+  color: #fff;
+  padding: 14px 16px;
+  border-radius: 50%;
+  cursor: pointer;
+  box-shadow: var(--shadow);
+  font-size: 20px;
+  z-index: 9999;
+}
+
+#chat-box {
+  position: fixed;
+  bottom: 90px;
+  right: 20px;
+  width: 320px;
+  background: #fff;
+  border-radius: 16px;
+  box-shadow: var(--shadow);
+  display: none;
+  flex-direction: column;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+#chat-header {
+  background: var(--accent);
+  color: #fff;
+  padding: 14px;
+  font-weight: 700;
+  font-size: 15px;
+}
+
+#chat-mensagens {
+  padding: 14px;
+  font-size: 14px;
+  max-height: 260px;
+  overflow-y: auto;
+}
+
+.chat-msg {
+  margin-bottom: 10px;
+  line-height: 1.4;
+}
+
+.chat-rute {
+  color: var(--text-strong);
+}
+
+.chat-user {
+  text-align: right;
+  font-weight: 600;
+  color: var(--accent);
+}
+
+#chat-opcoes {
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+#chat-opcoes button {
+  background: var(--secondary);
+  border: none;
+  border-radius: 10px;
+  padding: 10px;
+  cursor: pointer;
+  font-weight: 600;
+  color: var(--text-strong);
+}
+
   </style>
 </head>
   
@@ -635,6 +714,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
