--- a/index.html
+++ b/index.html
@@ -420,6 +420,36 @@ document.addEventListener("DOMContentLoaded", function () {
 });
 </script>
 
+  <!-- BOTÃO CHAT RUTE -->
+<div id="chat-botao" aria-label="Abrir chat">💬</div>
+
+<!-- CHAT RUTE -->
+<div id="chat-box">
+  <div id="chat-header">Rute 🌿</div>
+
+  <div id="chat-mensagens">
+    <div class="chat-msg chat-rute">
+      Oi! Eu sou a Rute 💛  
+      Estou aqui para te ouvir.  
+      Como posso te ajudar agora?
+    </div>
+  </div>
+
+  <div id="chat-opcoes">
+    <button onclick="ruteResponder('Estou me sentindo sobrecarregada')">
+      Estou sobrecarregada
+    </button>
+
+    <button onclick="ruteResponder('Quero me organizar melhor')">
+      Quero me organizar
+    </button>
+
+    <button onclick="ruteResponder('Só precisava de acolhimento')">
+      Só precisava conversar
+    </button>
+  </div>
+</div>
+
 <body>
 
   <div class="wrap">
@@ -714,6 +744,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
