--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <!-- CHAT RUTE -->
 <div id="chat-box">
-  <div id="chat-header">Rute 🌿</div>
+  <div id="chat-header">Rute✨️</div>
 
   <div id="chat-mensagens">
     <div class="chat-msg chat-rute">
@@ -436,18 +436,12 @@ document.addEventListener("DOMContentLoaded", function () {
   </div>
 
   <div id="chat-opcoes">
-    <button onclick="ruteResponder('Estou me sentindo sobrecarregada')">
-      Estou sobrecarregada
-    </button>
-
-    <button onclick="ruteResponder('Quero me organizar melhor')">
-      Quero me organizar
-    </button>
-
-    <button onclick="ruteResponder('Só precisava de acolhimento')">
-      Só precisava conversar
-    </button>
-  </div>
+  <button onclick="ruteResponder('sobrecarga')">😮‍💨 Estou sobrecarregada</button>
+  <button onclick="ruteResponder('rotina')">🗂 Quero organizar minha rotina</button>
+  <button onclick="ruteResponder('financas')">💰 Organizar finanças</button>
+  <button onclick="ruteResponder('confusa')">🧠 Estou confusa</button>
+  <button onclick="ruteResponder('conversar')">💬 Só conversar</button>
+  <button onclick="ruteResponder('contato')">📩 Falar com a Maria Eduarda</button>
 </div>
 
 <body>
@@ -776,6 +770,7 @@ function ruteResponder(texto) {
 
 </body>
 </html>
+
 
 
 
