--- a/index.html
+++ b/index.html
@@ -331,9 +331,6 @@
 
   </style>
 </head>
-  
-<script>
-document.addEventListener("DOMContentLoaded", function () {
 
   /* === PAUSA PRA VOCÊ === */
   const botaoPausa = document.querySelector("#acolhimento .btn");
@@ -443,6 +440,18 @@ document.addEventListener("DOMContentLoaded", function () {
   <button onclick="ruteResponder('conversar')">💬 Só conversar</button>
   <button onclick="ruteResponder('contato')">📩 Falar com a Maria Eduarda</button>
 </div>
+
+  ...
+</section> <!-- última seção -->
+
+<script>
+document.addEventListener("DOMContentLoaded", function () {
+  ...
+});
+</script>
+
+</body>
+</html>
 
 <body>
 
@@ -800,6 +809,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
