--- a/index.html
+++ b/index.html
@@ -367,6 +367,91 @@ document.addEventListener("DOMContentLoaded", function () {
   </div>
 </div>
 
+  <script>
+function toggleChat() {
+  const chat = document.getElementById('rute-chat');
+  chat.style.display = chat.style.display === 'flex' ? 'none' : 'flex';
+}
+
+function sendOption(type) {
+  const chatBody = document.getElementById('chatBody');
+
+  let response = '';
+
+  if (type === 'organizacao') {
+    response = `
+      Organização é sobre clareza ✨️<br><br>
+      Posso te ajudar com:
+      <div class="options">
+        <button onclick="sendOption('metodos')">📌 Métodos</button>
+        <button onclick="sendOption('planejamento')">🗂 Planejamento</button>
+      </div>
+    `;
+  }
+
+  if (type === 'rotina') {
+    response = `
+      Rotina não precisa ser rígida 😉<br><br>
+      Você quer:
+      <div class="options">
+        <button onclick="sendOption('manha')">🌤 Rotina da manhã</button>
+        <button onclick="sendOption('noite')">🌙 Rotina da noite</button>
+      </div>
+    `;
+  }
+
+  if (type === 'tempo') {
+    response = `
+      Gestão do tempo é gestão de energia 🧠<br><br>
+      Posso te mostrar:
+      <div class="options">
+        <button onclick="sendOption('prioridades')">🎯 Prioridades</button>
+        <button onclick="sendOption('procrastinacao')">⏳ Procrastinação</button>
+      </div>
+    `;
+  }
+
+  if (type === 'contato') {
+    response = `
+      Que bom falar com você 💛<br><br>
+      Clique abaixo para entrar em contato:
+      <div class="options">
+        <a href="https://wa.me/5500000000000" target="_blank">
+          <button>📲 WhatsApp</button>
+        </a>
+      </div>
+    `;
+  }
+
+  if (type === 'metodos') {
+    response = 'Métodos simples funcionam melhor do que sistemas complexos ✨️';
+  }
+
+  if (type === 'planejamento') {
+    response = 'Planejar é decidir antes para viver melhor depois 🗂';
+  }
+
+  if (type === 'manha') {
+    response = 'Manhã boa começa com menos decisões 🌤';
+  }
+
+  if (type === 'noite') {
+    response = 'Fechar o dia é um dos hábitos mais poderosos 🌙';
+  }
+
+  if (type === 'prioridades') {
+    response = 'Se tudo é prioridade, nada é prioridade 🎯';
+  }
+
+  if (type === 'procrastinacao') {
+    response = 'Começar pequeno reduz a procrastinação ⏳';
+  }
+
+  chatBody.innerHTML += `<div class="bot-message">${response}</div>`;
+  chatBody.scrollTop = chatBody.scrollHeight;
+}
+</script>
+
 <body>
 
   <div class="wrap">
@@ -661,4 +746,5 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
