--- a/index.html
+++ b/index.html
@@ -208,6 +208,39 @@
   font-size: 12px;
   color: var(--muted);
 }
+    /* ===== RUTE ASSISTENTE VIRTUAL ===== */
+#rute-button {
+  position: fixed !important;
+  bottom: 20px;
+  right: 20px;
+  width: 64px;
+  height: 64px;
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 99999;
+}
+
+#rute-button img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+/* Caixa do chat */
+#rute-chat {
+  position: fixed !important;
+  bottom: 100px;
+  right: 20px;
+  width: 320px;
+  max-height: 420px;
+  background: #ffffff;
+  border-radius: 16px;
+  box-shadow: 0 10px 30px rgba(0,0,0,0.2);
+  display: none;
+  flex-direction: column;
+  z-index: 99999;
+}
 
     /* RESPONSIVO */
     @media (max-width: 900px) {
@@ -746,5 +779,6 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
