--- a/index.html
+++ b/index.html
@@ -376,7 +376,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
   <!-- Assistente Virtual Rute -->
 <div id="rute-button" onclick="toggleChat()">
-  <img src="img/rute.png" alt="Rute Assistente Virtual">
+  Rute ✨
 </div>
 
 <div id="rute-chat">
@@ -779,6 +779,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
