--- a/index.html
+++ b/index.html
@@ -381,8 +381,10 @@ document.addEventListener("DOMContentLoaded", function () {
 
 <div id="rute-chat">
   <div class="chat-header">
-    <span>Rute ✨️</span>
-    <button onclick="toggleChat()">×</button>
+  <div id="rute-button" onclick="toggleChat()" aria-label="Abrir chat da Rute">
+  💬
+</div>
+
   </div>
 
   <div class="chat-body" id="chatBody">
@@ -779,6 +781,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
