--- a/index.html
+++ b/index.html
@@ -514,14 +514,24 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <div class="blog-grid">
 
     <div class="blog-card">
-      <span class="blog-tag">Organização</span>
-      <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
-      <p>
-        Pequenos ajustes na rotina podem gerar grandes resultados quando feitos
-        de forma consciente e possível.
-      </p>
-      <span class="blog-em-breve">Em breve</span>
-    </div>
+  <span class="blog-tag">Organização</span>
+
+  <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
+
+  <img 
+    src="assets/images/rotina-sem-sobrecarga.jpg"
+    alt="Organização da rotina de forma leve e possível"
+    class="blog-image"
+  >
+
+  <p>
+    Pequenos ajustes na rotina podem gerar grandes resultados quando feitos
+    de forma consciente e possível.
+  </p>
+
+  <span class="blog-em-breve">Em breve</span>
+</div>
+
 
     <div class="blog-card">
       <span class="blog-tag">Produtividade</span>
@@ -635,6 +645,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
