--- a/index.html
+++ b/index.html
@@ -209,6 +209,14 @@
   color: var(--muted);
 }
 
+    .blog-image {
+  width: 100%;
+  height: 160px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin: 12px 0;
+}
+
     /* RESPONSIVO */
     @media (max-width: 900px) {
       .grid-3 {
@@ -645,6 +653,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
