--- a/index.html
+++ b/index.html
@@ -520,15 +520,14 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </p>
 
   <div class="blog-grid">
-
-    <div class="blog-card">
+<a href="blog/rotina-sem-sobrecarga.html" class="blog-card">
   <span class="blog-tag">Organização</span>
 
   <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
 
   <img 
     src="assets/images/rotina-sem-sobrecarga.jpg"
-    alt="Organização da rotina de forma leve e possível"
+    alt="Organização da rotina de forma leve"
     class="blog-image"
   >
 
@@ -536,10 +535,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     Pequenos ajustes na rotina podem gerar grandes resultados quando feitos
     de forma consciente e possível.
   </p>
-
-  <span class="blog-em-breve">Em breve</span>
-</div>
-
+</a>
 
     <div class="blog-card">
       <span class="blog-tag">Produtividade</span>
@@ -653,6 +649,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
