--- a/index.html
+++ b/index.html
@@ -217,6 +217,26 @@
   margin: 12px 0;
 }
 
+    .post-container {
+  max-width: 720px;
+  margin: 60px auto;
+  padding: 0 16px;
+}
+
+.post-image {
+  width: 100%;
+  border-radius: 14px;
+  margin: 24px 0;
+}
+
+.post-container h1 {
+  margin-bottom: 16px;
+}
+
+.post-container h2 {
+  margin-top: 32px;
+}
+
     /* RESPONSIVO */
     @media (max-width: 900px) {
       .grid-3 {
@@ -649,6 +669,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
