--- a/index.html
+++ b/index.html
@@ -587,9 +587,9 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     significa que você está tentando dar conta de muita coisa sozinha.”
   </p>
 
-  <button class="btn btn-primary" onclick="mostrarMensagem()">
-    Eu precisava ler isso hoje
-  </button>
+ <button class="btn btn-primary">
+  Eu precisava ler isso hoje
+</button>
 
   <p id="mensagem-final"
      style="display:none;max-width:640px;margin:16px auto;font-weight:600;color:var(--text-strong)">
@@ -669,6 +669,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
 </body>
 </html>
+
 
 
 
