--- a/index.html
+++ b/index.html
@@ -167,6 +167,11 @@
   padding: 18px;
   border-radius: 12px;
 }
+    .blog-card {
+  text-decoration: none;
+  color: inherit;
+  display: block;
+}
 
 .blog-card h4 {
   margin: 8px 0;
@@ -669,6 +674,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
