--- a/index.html
+++ b/index.html
@@ -409,7 +409,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
   <p style="max-width:720px; line-height:1.6">
     Meu acompanhamento é simples, humano e adaptado à sua realidade.
-    Nada de fórmulas prontas ou processos complicados — caminhamos juntas,
+    Nada de fórmulas prontas ou processos complicados — caminhamos juntos(as),
     passo a passo.
   </p>
 
@@ -460,7 +460,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 <a href="blog/rotina-sem-sobrecarga.html" class="blog-card">
   <span class="blog-tag">Organização</span>
 
-  <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
+  <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
 
   <img 
     src="assets/images/rotina-sem-sobrecarga.jpg"
@@ -674,6 +674,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
