--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
 
 .post-image {
   width: 100%;
-  border-radius: 14px;
+  max-height: 420px;
+  object-fit: cover;
+  border-radius: 12px;
   margin: 24px 0;
 }
 
@@ -674,6 +676,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
