--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
 
 .post-image {
   width: 100%;
-  max-height: 420px;
+  max-height: 360px;
   object-fit: cover;
-  border-radius: 12px;
-  margin: 24px 0;
+  border-radius: 14px;
+  margin: 20px 0 28px;
 }
 
 .post-container h1 {
@@ -676,6 +676,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
