--- a/index.html
+++ b/index.html
@@ -2,11 +2,13 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-
+ <head>
+  <meta charset="UTF-8">
   <title>ME - Gestão na Prática</title>
-  <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada." />
+  <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada.">
+
+  <link rel="stylesheet" href="css/style.css">
+</head>
 
 </head>
   
@@ -398,6 +400,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
