--- a/index.html
+++ b/index.html
@@ -186,7 +186,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
 
   <img 
-    <img src="assets/images/rotina-sem-sobrecarga.jpg">
+    src="assets/images/rotina-sem-sobrecarga.jpg"
     alt="Organização da rotina de forma leve"
     class="blog-image"
   >
@@ -397,6 +397,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
