--- a/index.html
+++ b/index.html
@@ -6,7 +6,8 @@
   <title>ME - Gestão na Prática</title>
   <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada.">
 
-  <link rel="stylesheet" href="css/style.css">
+ <link rel="stylesheet" href="./css/style.css">
+
 </head>
   
 <body>
@@ -397,6 +398,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
