--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="pt-BR">
 
 <head>
-  <meta charset="UTF-8">
-  <title>ME - Gestão na Prática</title>
-  <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada.">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 
- <link rel="stylesheet" href="./css/style.css">
-  
-</style>
+  <title>ME - Gestão na Prática</title>
+  <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada." />
+
+  <style>
     :root {
       --bg: #F2EFE8;
       --card: #F2EFE8;
@@ -284,6 +284,7 @@
     grid-template-columns: 1fr;
   }
 }
+
   </style>
 </head>
   
@@ -675,23 +676,6 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
