--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
   <title>ME - Gestão na Prática</title>
   <meta name="description" content="Serviços de consultoria administrativa simples e descomplicada." />
-
+ <!-- CSS do site -->
+  <link rel="stylesheet" href="css/styles.css">
   <style>
     :root {
       --bg: #F2EFE8;
@@ -676,6 +677,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
