--- a/index.html
+++ b/index.html
@@ -478,13 +478,22 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </a>
 
     <div class="blog-card">
-      <span class="blog-tag">Produtividade</span>
-      <h4>Produtividade real: fazer o que importa</h4>
-      <p>
-        Ser produtiva não é fazer mais, é fazer melhor — respeitando seu ritmo
-        e sua realidade.
-      </p>
-      <span class="blog-em-breve">Em breve</span>
+     <a href="financas-leves.html" class="blog-card">
+  <span class="blog-tag">Finanças</span>
+
+  <h4>Finanças leves: como organizar seu dinheiro sem viver em alerta</h4>
+
+  <img 
+    src="assets/images/financas-leves.jpg"
+    alt="Organização financeira com leveza"
+    class="blog-image"
+  >
+
+  <p>
+    Organize seu dinheiro sem culpa, sem medo e sem complicação — com clareza e leveza para a vida real.
+  </p>
+</a>
+
     </div>
 
     <div class="blog-card">
@@ -496,7 +505,6 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
       </p>
       <span class="blog-em-breve">Em breve</span>
     </div>
-
   </div>
 </section>
     <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
@@ -677,6 +685,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
