--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </a>
 
     <div class="blog-card">
-     <a href="financas-leves.html" class="blog-card">
+    <a href="blog/financas-leves.html" class="blog-card">
   <span class="blog-tag">Finanças</span>
 
   <h4>Finanças leves: como organizar seu dinheiro sem viver em alerta</h4>
@@ -685,6 +685,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
