--- a/index.html
+++ b/index.html
@@ -497,13 +497,22 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     </div>
 
     <div class="blog-card">
-      <span class="blog-tag">Gestão simples</span>
-      <h4>Gestão não precisa ser complicada</h4>
-      <p>
-        A gestão que funciona é aquela que cabe na sua vida e te ajuda,
-        não a que te paralisa.
-      </p>
-      <span class="blog-em-breve">Em breve</span>
+     <a href="blog/voce-nao-esta-atrasada.html" class="blog-card">
+  <span class="blog-tag">Rotina</span>
+
+  <h4>Você não está atrasada: está sobrecarregada</h4>
+
+  <img 
+    src="assets/images/nao-esta-atrasada.jpg"
+    alt="Pessoa em pausa, organizando pensamentos"
+    class="blog-image"
+  >
+
+  <p>
+    Nem sempre o problema é falta de disciplina — às vezes é excesso de peso.
+    Entenda por que você se sente sempre correndo.
+  </p>
+</a>
     </div>
   </div>
 </section>
@@ -685,6 +694,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
