--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <h3>Uma pausa pra você</h3>
 
   <p id="frase-inicial" style="max-width:640px;margin:12px auto;line-height:1.6">
-    “Sentir-se sobrecarregada não significa falta de capacidade —
-    significa que você está tentando dar conta de muita coisa sozinha.”
+    “Sentir-se sobrecarregado(a) não significa falta de capacidade —
+    significa que você está tentando dar conta de muita coisa sozinho(a).”
   </p>
 
  <button class="btn btn-primary">
@@ -694,6 +694,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
