--- a/index.html
+++ b/index.html
@@ -500,7 +500,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
      <a href="blog/voce-nao-esta-atrasada.html" class="blog-card">
   <span class="blog-tag">Rotina</span>
 
-  <h4>Você não está atrasada: está sobrecarregada</h4>
+  <h4>Você não está atrasado(a): está sobrecarregado(a)</h4>
 
   <img 
     src="assets/images/nao-esta-atrasada.jpg"
@@ -694,6 +694,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
