--- a/index.html
+++ b/index.html
@@ -596,6 +596,9 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 
     <footer>
       © <span id="ano"></span> — ME - Gestão na Prática
+      <a href="sobre.html">Sobre</a> |
+<a href="contato.html">Contato</a> |
+<a href="politica-de-privacidade.html">Política de Privacidade</a>
     </footer>
 
   </div>
@@ -694,6 +697,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
