--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <h4>Finanças leves: como organizar seu dinheiro sem viver em alerta</h4>
 
   <img 
-    src="assets/images/financas-leves.jpg"
+    src="financas-leves.jpg"
     alt="Organização financeira com leveza"
     class="blog-image"
   >
@@ -697,6 +697,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
