--- a/index.html
+++ b/index.html
@@ -514,6 +514,12 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   </p>
 </a>
     </div>
+    <a href="blog/rotina-sabotando.html" class="blog-card">
+   <span class="blog-tag">Organização</span>
+   <h3>A rotina que parece produtiva, mas está sabotando seu negócio</h3>
+   <p>Quando estar ocupada não significa estar avançando.</p>
+</a>
+
   </div>
 </section>
     <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
@@ -697,6 +703,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
