--- a/index.html
+++ b/index.html
@@ -521,6 +521,13 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
 </a>
 
   </div>
+      <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card">
+  <span class="blog-tag">Finanças</span>
+  <h3>Por que você trabalha tanto e ainda sente que o dinheiro não sobra?</h3>
+  <p>Quando o problema não é falta de clientes, mas falta de clareza.</p>
+</a>
+      
+</div>
 </section>
     <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
   <h3>Uma pausa pra você</h3>
@@ -703,6 +710,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
