--- a/index.html
+++ b/index.html
@@ -459,74 +459,46 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     sobre organização, produtividade e gestão aplicada ao dia a dia.
   </p>
 
-  <div class="blog-grid">
-<a href="blog/rotina-sem-sobrecarga.html" class="blog-card">
-  <span class="blog-tag">Organização</span>
+ <div class="blog-grid">
 
-  <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
+  <!-- POST 1 -->
+  <a href="blog/rotina-sem-sobrecarga.html" class="blog-card">
+    <span class="blog-tag">Organização</span>
+    <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
+    <img src="assets/images/rotina-sem-sobrecarga.jpg" class="blog-image">
+    <p>Pequenos ajustes que aliviam sua rotina e aumentam seus resultados.</p>
+  </a>
 
-  <img 
-    src="assets/images/rotina-sem-sobrecarga.jpg"
-    alt="Organização da rotina de forma leve"
-    class="blog-image"
-  >
+  <!-- POST 2 -->
+  <a href="blog/financas-leves.html" class="blog-card">
+    <span class="blog-tag">Finanças</span>
+    <h4>Finanças leves: como organizar seu dinheiro</h4>
+    <img src="assets/images/financas-leves.jpg" class="blog-image">
+    <p>Organize seu dinheiro sem culpa, medo ou complicação.</p>
+  </a>
 
-  <p>
-    Pequenos ajustes na rotina podem gerar grandes resultados quando feitos
-    de forma consciente e possível.
-  </p>
-</a>
+  <!-- POST 3 -->
+  <a href="blog/voce-nao-esta-atrasada.html" class="blog-card">
+    <span class="blog-tag">Rotina</span>
+    <h4>Você não está atrasada, está sobrecarregada</h4>
+    <img src="assets/images/voce-nao-esta-atrasada.jpg" class="blog-image">
+    <p>Nem sempre o problema é falta de disciplina.</p>
+  </a>
 
-    <div class="blog-card">
-    <a href="blog/financas-leves.html" class="blog-card">
-  <span class="blog-tag">Finanças</span>
+  <!-- POST 4 (oculto na home) -->
+  <a href="blog/rotina-sabotando.html" class="blog-card hidden-post">
+    <span class="blog-tag">Organização</span>
+    <h4>A rotina que parece produtiva, mas te sabota</h4>
+    <p>Quando estar ocupada não significa avançar.</p>
+  </a>
 
-  <h4>Finanças leves: como organizar seu dinheiro sem viver em alerta</h4>
-
-  <img 
-    src="assets/images/financas-leves.jpg"
-    alt="Organização financeira com leveza"
-    class="blog-image"
-  >
-
-  <p>
-    Organize seu dinheiro sem culpa, sem medo e sem complicação — com clareza e leveza para a vida real.
-  </p>
-</a>
-
-    </div>
-
-    <div class="blog-card">
-     <a href="blog/voce-nao-esta-atrasada.html" class="blog-card">
-  <span class="blog-tag">Rotina</span>
-
-  <h4>Você não está atrasado(a): está sobrecarregado(a)</h4>
-
-  <img 
-    src="assets/images/voce-nao-esta-atrasada.jpg"
-    alt="Pessoa em pausa, organizando pensamentos"
-    class="blog-image"
-  >
-
-  <p>
-    Nem sempre o problema é falta de disciplina — às vezes é excesso de peso.
-    Entenda por que você se sente sempre correndo.
-  </p>
-</a>
-    </div>
-    <a href="blog/rotina-sabotando.html" class="blog-card">
-   <span class="blog-tag">Organização</span>
-   <h3>A rotina que parece produtiva, mas está sabotando seu negócio</h3>
-   <p>Quando estar ocupada não significa estar avançando.</p>
-</a>
-
-  </div>
-      <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card">
-  <span class="blog-tag">Finanças</span>
-  <h3>Por que você trabalha tanto e ainda sente que o dinheiro não sobra?</h3>
-  <p>Quando o problema não é falta de clientes, mas falta de clareza.</p>
-</a>
-      
+  <!-- POST 5 (oculto na home) -->
+  <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card hidden-post">
+    <span class="blog-tag">Finanças</span>
+    <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
+    <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
+  </a>
+   
 </div>
 </section>
     <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
@@ -710,6 +682,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
