--- a/index.html
+++ b/index.html
@@ -494,6 +494,16 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
     <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
   </a>
 </div>
+      </div> <!-- fecha .blog-grid -->
+
+<div style="text-align:center;margin-top:20px">
+  <a href="blog.html" class="btn btn-outline">
+    Ver todos os artigos →
+  </a>
+</div>
+
+</section>
+
 </section>
     <section class="card" style="margin-top:24px;text-align:center" id="acolhimento">
   <h3>Uma pausa pra você</h3>
@@ -676,6 +686,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
