--- a/blog.html
+++ b/blog.html
@@ -35,7 +35,7 @@
 
     <a href="blog/rotina-sem-sobrecarga.html" class="blog-card">
       <span class="blog-tag">Organização</span>
-      <h4>Como organizar sua rotina sem se sentir sobrecarregada</h4>
+      <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
       <img src="assets/images/rotina-sem-sobrecarga.jpg" class="blog-image">
       <p>Pequenos ajustes que aliviam sua rotina e aumentam seus resultados.</p>
     </a>
@@ -49,7 +49,7 @@
 
     <a href="blog/voce-nao-esta-atrasada.html" class="blog-card">
       <span class="blog-tag">Rotina</span>
-      <h4>Você não está atrasada, está sobrecarregada</h4>
+      <h4>Você não está atrasado(a), está sobrecarregado(a)</h4>
       <img src="assets/images/voce-nao-esta-atrasada.jpg" class="blog-image">
       <p>Nem sempre o problema é falta de disciplina.</p>
     </a>
@@ -57,7 +57,7 @@
     <a href="blog/rotina-sabotando.html" class="blog-card">
       <span class="blog-tag">Organização</span>
       <h4>A rotina que parece produtiva, mas te sabota</h4>
-      <p>Quando estar ocupada não significa avançar.</p>
+      <p>Quando estar ocupado(a) não significa avançar.</p>
     </a>
 
     <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card">
