--- a/index.html
+++ b/index.html
@@ -485,15 +485,23 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <a href="blog/rotina-sabotando.html" class="blog-card hidden-post">
     <span class="blog-tag">Organização</span>
     <h4>A rotina que parece produtiva, mas te sabota</h4>
+     <img src="assets/images/rotina-sabotando.jpg" class="blog-image">
     <p>Quando estar ocupado(a) não significa avançar.</p>
   </a>
 
   <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card hidden-post">
     <span class="blog-tag">Finanças</span>
     <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
+     <img src="assets/images/dinheiro-sobra.jpg" class="blog-image">
     <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
   </a>
 </div>
+      <a href="blog/planejar-semana.html" class="blog-card hidden-post">
+  <span class="blog-tag">Organização</span>
+  <h4>Como planejar a semana sem se frustrar</h4>
+  <img src="assets/images/planejar-semana.jpg" class="blog-image">
+  <p>Planejamento realista, flexível e sem cobrança excessiva.</p>
+</a>
       </div> <!-- fecha .blog-grid -->
 
 <div style="text-align:center;margin-top:20px">
@@ -686,6 +694,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
