--- a/index.html
+++ b/index.html
@@ -501,6 +501,7 @@ Seja para organizar sua vida, sua rotina, seus estudos ou suas finanças leves, 
   <img src="assets/images/planejar-semana.jpg" class="blog-image">
   <p>Planejamento realista, flexível e sem cobrança excessiva.</p>
 </a>
+  </div>
       </div> <!-- fecha .blog-grid -->
 
 <div style="text-align:center;margin-top:20px">
@@ -693,6 +694,7 @@ document.addEventListener("DOMContentLoaded", function () {
 
 </body>
 </html>
+
 
 
 
