--- a/blog.html
+++ b/blog.html
@@ -57,14 +57,23 @@
     <a href="blog/rotina-sabotando.html" class="blog-card">
       <span class="blog-tag">Organização</span>
       <h4>A rotina que parece produtiva, mas te sabota</h4>
+      <img src="assets/images/rotina-sabotando.jpg" class="blog-image">
       <p>Quando estar ocupado(a) não significa avançar.</p>
     </a>
 
     <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card">
       <span class="blog-tag">Finanças</span>
       <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
+       <img src="assets/images/por-que-o-dinheiro.jpg" class="blog-image">
       <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
     </a>
+
+    <a href="blog/planejar-semana.html" class="blog-card hidden-post">
+  <span class="blog-tag">Organização</span>
+  <h4>Como planejar a semana sem se frustrar</h4>
+  <img src="assets/images/planejar-semana.jpg" class="blog-image">
+  <p>Planejamento realista, flexível e sem cobrança excessiva.</p>
+</a>
 
   </div>
 </section>
