--- a/blog.html
+++ b/blog.html
@@ -68,7 +68,7 @@
       <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
     </a>
 
-    <a href="blog/planejar-semana.html" class="blog-card hidden-post">
+    <a href="blog/planejar-semana.html" class="blog-card">
   <span class="blog-tag">Organização</span>
   <h4>Como planejar a semana sem se frustrar</h4>
   <img src="assets/images/planejar-semana.jpg" class="blog-image">
