--- a/blog.html
+++ b/blog.html
@@ -30,6 +30,15 @@
   <p style="max-width:720px">
     Conteúdos sobre organização, rotina, finanças e gestão leve para a vida real.
   </p>
+  
+<div class="blog-filters">
+  <button class="filter-btn active" data-filter="all">Todos</button>
+  <button class="filter-btn" data-filter="organizacao">Organização</button>
+  <button class="filter-btn" data-filter="rotina">Rotina</button>
+  <button class="filter-btn" data-filter="financas">Finanças</button>
+  <button class="filter-btn" data-filter="produtividade">Produtividade</button>
+  <button class="filter-btn" data-filter="gestao">Gestão</button>
+</div>
 
   <div class="blog-grid">
 
