--- a/blog.html
+++ b/blog.html
@@ -42,42 +42,42 @@
 
   <div class="blog-grid">
 
-    <a href="blog/rotina-sem-sobrecarga.html" class="blog-card data-category="organizacao">
+    <a href="blog/rotina-sem-sobrecarga.html" class="blog-card" data-category="organizacao">
       <span class="blog-tag">Organização</span>
       <h4>Como organizar sua rotina sem se sentir sobrecarregado(a)</h4>
       <img src="assets/images/rotina-sem-sobrecarga.jpg" class="blog-image">
       <p>Pequenos ajustes que aliviam sua rotina e aumentam seus resultados.</p>
     </a>
 
-    <a href="blog/financas-leves.html" class="blog-card data-category="financas">
+    <a href="blog/financas-leves.html" class="blog-card" data-category="financas">
       <span class="blog-tag">Finanças</span>
       <h4>Finanças leves: como organizar seu dinheiro</h4>
       <img src="assets/images/financas-leves.jpg" class="blog-image">
       <p>Organize seu dinheiro sem culpa, medo ou complicação.</p>
     </a>
 
-    <a href="blog/voce-nao-esta-atrasada.html" class="blog-card data-category="rotina">
+    <a href="blog/voce-nao-esta-atrasada.html" class="blog-card" data-category="rotina">
       <span class="blog-tag">Rotina</span>
       <h4>Você não está atrasado(a), está sobrecarregado(a)</h4>
       <img src="assets/images/voce-nao-esta-atrasada.jpg" class="blog-image">
       <p>Nem sempre o problema é falta de disciplina.</p>
     </a>
 
-    <a href="blog/rotina-sabotando.html" class="blog-card data-category="organizacao">
+    <a href="blog/rotina-sabotando.html" class="blog-card" data-category="organizacao">
       <span class="blog-tag">Organização</span>
       <h4>A rotina que parece produtiva, mas te sabota</h4>
       <img src="assets/images/rotina-sabotando.jpg" class="blog-image">
       <p>Quando estar ocupado(a) não significa avançar.</p>
     </a>
 
-    <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card data-category="financas">
+    <a href="blog/por-que-o-dinheiro-nao-sobra.html" class="blog-card" data-category="financas">
       <span class="blog-tag">Finanças</span>
       <h4>Por que você trabalha tanto e o dinheiro não sobra?</h4>
        <img src="assets/images/por-que-o-dinheiro.jpg" class="blog-image">
       <p>Quando o problema não é falta de clientes, é falta de clareza.</p>
     </a>
 
-    <a href="blog/planejar-semana.html" class="blog-card data-category="organizacao">
+    <a href="blog/planejar-semana.html" class="blog-card" data-category="organizacao">
   <span class="blog-tag">Organização</span>
   <h4>Como planejar a semana sem se frustrar</h4>
   <img src="assets/images/planejar-semana.jpg" class="blog-image">
