--- a/blog.html
+++ b/blog.html
@@ -84,6 +84,20 @@
   <p>Planejamento realista, flexível e sem cobrança excessiva.</p>
 </a>
 
+    <a href="blog/gestao-na-pratica.html" class="blog-card" data-category="gestao">
+  <span class="blog-tag">Gestão</span>
+  <h4>O que é gestão na prática</h4>
+  <img src="assets/images/gestao-na-pratica.jpg" class="blog-image">
+  <p>Clareza, estrutura e decisões melhores no dia a dia.</p>
+</a>
+
+<a href="blog/produtividade-real.html" class="blog-card" data-category="produtividade">
+  <span class="blog-tag">Produtividade</span>
+  <h4>Produtividade não é fazer mais</h4>
+  <img src="assets/images/produtividade-real.jpg" class="blog-image">
+  <p>Como usar melhor o tempo sem se esgotar.</p>
+</a>
+
   </div>
 </section>
 
